instructions to setup the project added in the readme